# Translate_doc

./: .gitignore
Assessment/: Sample_FastMCP.py
hermes_framework/: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_VIEW.html  ARCHITECTURE_VIEW.md  Dockerfile.api  Dockerfile.mcp  README.html  README.md  docker-compose.yml  pyproject.toml
hermes_framework/app/: __init__.py  config.py  main.py  mcp_server.py  models.py
hermes_framework/app/api/: server.py  sse.py
hermes_framework/app/engine/: containers.py  interrogator.py  orchestrator.py  planner.py  prompts.py  router.py  scheduler.py
hermes_framework/app/llm/: anthropic_client.py
hermes_framework/app/mcp_client/: client.py
hermes_framework/app/sandbox/: mcp_shim.py  policy.py  runner.py
hermes_framework/app/state/: checkpoint.py  schema.sql  store.py
hermes_framework/app/ui/: app.js  index.html  styles.css
hermes_framework/app/workers/: base.py  code_worker.py  subagent_worker.py  tool_worker.py
hermes_framework/docs/screenshots/: README.md
hermes_framework/scripts/: build_docs_html.py  demo_queries.sh  run_api.sh  run_mcp.sh
hermes_framework/tests/: conftest.py  test_code_worker_markers.py  test_planner_schema.py  test_sandbox_policy.py  test_sandbox_runner.py  test_scheduler_dag.py  test_sse_replay.py  test_tool_worker.py  test_validator.py
hermes_framework/tests/fixtures/: sample_plan.json
